--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -8,8 +8,7 @@ COPY . .
 
 RUN npm run build && apk add tzdata
 
-FROM node:16-alpine as production
-
+FROM node:16-alpine as dev
 
 WORKDIR /usr/src/app
 
