--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,23 +1,11 @@
-FROM node:16-alpine as build
+FROM node:16-alpine
 
-WORKDIR /usr/src/app
-
-COPY package*.json ./
-
-COPY . .
-
-RUN npm run build && apk add tzdata
-
-FROM node:16-alpine as dev
-
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --only=production
+RUN npm install
 
 COPY . .
 
-COPY --from=build /usr/src/app/dist ./dist
-
-CMD ["npm", "run", "start:debug"] 
+CMD [ "npm", "run", "start:debug" ]
